--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@types/ramda": "^0.29.3",
+    "mobx": "^6.10.2",
+    "mobx-state-tree": "^5.1.8",
     "ramda": "^0.29.0",
     "react": "18.2.0",
     "react-native": "0.72.4",
+    "react-native-gesture-handler": "^2.12.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "^4.7.2",
     "react-native-screens": "^3.25.0",
